Youtube Demo/src/objects/Maintainence_CS__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Maintenance_Active_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if maintenance is currently active</description>
        <label>Maintenance_Active_Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Date__c</fullName>
        <label>Maintenance_End_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Date__c</fullName>
        <description>Maintenance_Start_Date</description>
        <label>Maintenance_Start_Date</label>
        <type>DateTime</type>
    </fields>
    <label>Maintainence</label>
</CustomObject>